--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,17 +1,16 @@
-@import url(http://fonts.googleapis.com/css?family=Roboto);
 body{
-  background-color:#B2DFDB;
-
+  background-color:black;
 }
+
 #comic {
+   color:green;
    position: absolute;
-   text-align:center;
-   font-family:Roboto;
-   font-color:#b3dfbe;
+   text-aligni:center;
+   font-family:Courier New;
    top: 50%;
    left: 50%;
    width: 500px;
    height: 500px;
-   margin-top: -250px; /* Half the height */
-   margin-left: -250px; /* Half the width */
+   margin-top: -250px;
+   margin-left: -250px;
 }
